--- a/index.html
+++ b/index.html
@@ -7,116 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="main.bundle.js"></script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        table {
-            border: 2px solid black;
-            border-collapse: collapse;
-        }
-
-        td {
-            border: 1px solid black;
-            width: 40px;
-            height: 40px;
-            text-align: center;
-            font-size: 34px;
-            color: red;
-        }
-
-        #main {
-            display: inline;
-        }
-
-        #left {
-            width: 48%;
-            height: 80%;
-            float: left;
-            margin: 1%;
-        }
-
-        #l_left {
-            float: left;
-            width: 30%;
-        }
-
-        #l_right {
-            float: left;
-            width: 70%;
-        }
-
-        #right {
-            width: 48%;
-            height: 80%;
-            float: left;
-            margin: 1%;
-        }
-
-        p.info {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        #down {
-            float: left;
-            width: 100%;
-            height: 20%;
-            text-align: center;
-        }
-
-        .button {
-            display: inline-block;
-            padding: 15px 25px;
-            font-size: 24px;
-            cursor: pointer;
-            text-align: center;
-            text-decoration: none;
-            outline: none;
-            color: #fff;
-            background-color: #4CAF50;
-            border: none;
-            border-radius: 15px;
-            box-shadow: 0 9px #999;
-        }
-
-        .button:hover {
-            background-color: #3e8e41
-        }
-
-        .button:active {
-            background-color: #3e8e41;
-            box-shadow: 0 5px #666;
-            transform: translateY(4px);
-        }
-
-        #d_info {
-            margin: 0 auto;
-            margin-top: 20px;
-            width: 40%;
-            height: 40px;
-            border: 1px solid black;
-            font-size: 28px;
-        }
-
-        #d_info2 {
-            text-align: center;
-            margin: 0 auto;
-            margin-top: 20px;
-            width: 40%;
-            height: 120px;
-            border: 1px solid black;
-            font-size: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -142,7 +33,7 @@
             <div id="d_info"></div>
             <br />
 
-            <textarea readonly id="d_info2" ></textarea>
+            <textarea readonly id="d_info2"></textarea>
 
         </div>
     </div>
