Add mobile layout

--- a/index.html
+++ b/index.html
@@ -14,29 +14,22 @@
 <body>
     <div id="main">
         <div id="left">
-
-            <br />
-            <div>
-                <table id="l_left" style="border:0;"></table>
-            </div>
+            <table id="l_left" style="border:0;">
+            </table>
             <div id="l_right">
                 <p class="info">Twoja plansza</p>
-                <br />
             </div>
-        </div>
-        <div id="right">
-            <br />
-            <p class="info">Komputer</p>
-            <br />
         </div>
         <div id="down">
             <button class="button" disabled id="bt_start">Start</button>
             <div id="d_info"></div>
-            <br />
-
             <textarea readonly id="d_info2"></textarea>
-
         </div>
+        <div id="right">
+            <br />
+            <p class="info">Komputer</p>
+        </div>
+
     </div>
 
 </body>
