Add mobile layout

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <br />
             <p class="info">Komputer</p>
         </div>
-
+        <div id="down">
+            <button class="button" disabled id="bt_start">Start</button>
+            <div id="d_info"></div>
+            <textarea readonly id="d_info2"></textarea>
+        </div>
     </div>
 
 </body>
