--- a/index.html
+++ b/index.html
@@ -26,13 +26,8 @@
             <textarea readonly id="d_info2"></textarea>
         </div>
         <div id="right">
-            <br />
-            <p class="info">Komputer</p>
-        </div>
-        <div id="down">
-            <button class="button" disabled id="bt_start">Start</button>
-            <div id="d_info"></div>
-            <textarea readonly id="d_info2"></textarea>
+            <br>
+            <p class="info_2">Komputer</p>
         </div>
     </div>
 
