Add mobile layout

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <button class="button" disabled id="bt_start">Start</button>
             <div id="d_info"></div>
             <textarea readonly id="d_info2"></textarea>
+            <p class="info">Komputer</p>
         </div>
+
         <div id="right">
-            <br>
-            <p class="info_2">Komputer</p>
         </div>
     </div>
 
